--- a/app/src/main/res/layout/activity_add_round.xml
+++ b/app/src/main/res/layout/activity_add_round.xml
@@ -27,6 +27,18 @@
         android:layout_marginBottom="8dp"
         android:text="@string/hole_1"
         app:layout_constraintBottom_toBottomOf="@+id/selectedCourseTextView"
+        app:layout_constraintEnd_toStartOf="@+id/textView_AddRoundHolePar"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_AddRoundHolePar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Par 3"
+        app:layout_constraintBottom_toBottomOf="@+id/selectedCourseTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,69 +52,6 @@
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selectedCourseTextView" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout_NumPutts"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/textView_NumPutts"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_NumPutts"
-        app:layout_constraintTop_toTopOf="@+id/textView_NumPutts">
-
-        <ToggleButton
-            android:id="@+id/toggleButton_numPutts1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/toggleButtonMinWidth"
-            android:text=""
-            android:textOff="@string/_1"
-            android:textOn="@string/_1" />
-
-        <ToggleButton
-            android:id="@+id/toggleButton_numPutts2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/toggleButtonMinWidth"
-            android:text=""
-            android:textOff="@string/_2"
-            android:textOn="@string/_2"/>
-
-        <ToggleButton
-            android:id="@+id/toggleButton_numPutts3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/toggleButtonMinWidth"
-            android:text=""
-            android:textOff="@string/_3"
-            android:textOn="@string/_3"/>
-
-        <ToggleButton
-            android:id="@+id/toggleButton_numPutts4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/toggleButtonMinWidth"
-            android:text=""
-            android:textOff="@string/_4"
-            android:textOn="@string/_4" />
-
-    </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/textView_NumPutts"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/putts"
-        android:textSize="28sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_HoleScore" />
-
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView_HoleScore"
@@ -234,8 +183,73 @@
         </LinearLayout>
     </HorizontalScrollView>
 
+    <LinearLayout
+        android:id="@+id/linearLayout_NumPutts"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/textView_NumPutts"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView_NumPutts"
+        app:layout_constraintTop_toTopOf="@+id/textView_NumPutts">
+
+        <ToggleButton
+            android:id="@+id/toggleButton_numPutts1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/toggleButtonMinWidth"
+            android:text=""
+            android:textOff="@string/_1"
+            android:textOn="@string/_1" />
+
+        <ToggleButton
+            android:id="@+id/toggleButton_numPutts2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/toggleButtonMinWidth"
+            android:text=""
+            android:textOff="@string/_2"
+            android:textOn="@string/_2"/>
+
+        <ToggleButton
+            android:id="@+id/toggleButton_numPutts3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/toggleButtonMinWidth"
+            android:text=""
+            android:textOff="@string/_3"
+            android:textOn="@string/_3"/>
+
+        <ToggleButton
+            android:id="@+id/toggleButton_numPutts4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/toggleButtonMinWidth"
+            android:text=""
+            android:textOff="@string/_4"
+            android:textOn="@string/_4" />
+
+    </LinearLayout>
+
+
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView_NumPutts"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/putts"
+        android:textSize="28sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_HoleScore" />
+
+
+
+
+    <TextView
+        android:id="@+id/text_Fairway"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -252,10 +266,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintBottom_toBottomOf="@+id/text_Fairway"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView3">
+        app:layout_constraintStart_toEndOf="@+id/text_Fairway"
+        app:layout_constraintTop_toTopOf="@+id/text_Fairway">
 
         <ToggleButton
             android:id="@+id/toggleButton_FW_Hit"
@@ -297,7 +311,7 @@
         android:text="@string/chip"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/text_Fairway" />
 
     <ToggleButton
         android:id="@+id/toggleButton_Chip"
