--- a/app/src/main/res/layout/activity_add_round.xml
+++ b/app/src/main/res/layout/activity_add_round.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
@@ -8,7 +8,7 @@
     tools:context=".AddRoundActivity">
 
     <TextView
-        android:id="@+id/selectedCourseTextView"
+        android:id="@+id/TextView_selectedCourse"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -19,14 +19,37 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView_selectedCourseIdDigit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/x"
+        android:textSize="30sp"
+        app:layout_constraintStart_toEndOf="@+id/TextView_selectedCourse"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/textView_AddRoundHoleNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/holej"
+        app:layout_constraintBottom_toBottomOf="@+id/TextView_selectedCourse"
+        app:layout_constraintEnd_toStartOf="@+id/textView_AddRoundHoleNumberDigit"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_AddRoundHoleNumberDigit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/hole_1"
-        app:layout_constraintBottom_toBottomOf="@+id/selectedCourseTextView"
+        android:text="@string/x1"
+        app:layout_constraintBottom_toBottomOf="@+id/TextView_selectedCourse"
         app:layout_constraintEnd_toStartOf="@+id/textView_AddRoundHolePar"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,10 +58,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/parj"
+        app:layout_constraintBottom_toBottomOf="@+id/TextView_selectedCourse"
+        app:layout_constraintEnd_toStartOf="@+id/textView_AddRoundHoleParDigit"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_AddRoundHoleParDigit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Par 3"
-        app:layout_constraintBottom_toBottomOf="@+id/selectedCourseTextView"
+        android:text="@string/x2"
+        app:layout_constraintBottom_toBottomOf="@+id/TextView_selectedCourse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,7 +86,7 @@
         android:text="@string/score"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selectedCourseTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/TextView_selectedCourse" />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView_HoleScore"
@@ -134,6 +169,13 @@
                 android:textOn="@string/_6"
                 tools:layout_editor_absoluteX="135dp"
                 tools:layout_editor_absoluteY="89dp" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/_1" />
 
             <ToggleButton
                 android:id="@+id/toggleButton_HoleScore7"
